--- a/front/satab/package.json
+++ b/front/satab/package.json
@@ -25,6 +25,7 @@
     "dayjs": "^1.11.13",
     "jalali-dayjs": "^0.0.1",
     "leaflet": "^1.9.4",
+    "lodash": "^4.17.21",
     "mapbox-gl": "^3.14.0",
     "maplibre-gl": "^5.6.2",
     "qs": "^6.14.0",
@@ -32,6 +33,7 @@
     "react-dom": "^18.3.1",
     "react-leaflet": "^4.2.1",
     "react-router-dom": "^7.7.1",
+    "recharts": "^3.2.0",
     "socket.io-client": "^4.8.1",
     "stylis": "^4.3.6",
     "stylis-plugin-rtl": "^2.1.1"
@@ -39,6 +41,7 @@
   "devDependencies": {
     "@eslint/js": "^9.30.1",
     "@types/leaflet": "^1.9.4",
+    "@types/lodash": "^4.17.20",
     "@types/mapbox-gl": "^3.4.1",
     "@types/qs": "^6.14.0",
     "@types/react": "^19.1.9",
