--- a/front/satab/package.json
+++ b/front/satab/package.json
@@ -10,6 +10,9 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@chakra-ui/react": "^3.27.0",
+    "@chakra-ui/theme": "^3.4.6",
+    "@chakra-ui/theme-tools": "^2.2.6",
     "@date-io/dayjs": "^3.2.0",
     "@emotion/react": "^11.14.0",
     "@emotion/styled": "^11.14.1",
@@ -29,6 +32,8 @@
     "convex": "^1.26.1",
     "date-fns-jalali": "^4.0.0-0",
     "dayjs": "^1.11.13",
+    "framer-motion": "^12.23.22",
+    "gsap": "^3.13.0",
     "jalali-dayjs": "^0.0.1",
     "leaflet": "^1.9.4",
     "lodash": "^4.17.21",
@@ -52,6 +57,7 @@
     "@types/qs": "^6.14.0",
     "@types/react": "^18.3.24",
     "@types/react-dom": "^18.3.7",
+    "@types/stylis": "^4.2.7",
     "@vitejs/plugin-react": "^4.6.0",
     "eslint": "^9.30.1",
     "eslint-plugin-react-hooks": "^5.2.0",
