--- a/satab-backend/package.json
+++ b/satab-backend/package.json
@@ -50,6 +50,7 @@
     "class-validator": "^0.14.2",
     "compression": "^1.8.1",
     "convex": "^1.26.1",
+    "fastify": "^5.6.1",
     "geolib": "^3.3.4",
     "helmet": "^8.1.0",
     "ioredis": "^5.7.0",
